1/3/23, change project to recipeapp

--- a/index.html
+++ b/index.html
@@ -298,29 +298,24 @@
             </div>
             <div class="mini-inner-content reveal">
               <div class="img-div">
-                <img src="/image/formvalidation.png" alt="" />
+                <img src="/image/recipeapp.jpg" alt="" />
               </div>
               <div class="description">
-                <p class="bold-text">Form Validation</p>
+                <p class="bold-text">Recipe App</p>
                 <small>Html, Sass, JavaScript</small>
                 <p>
-                  A form validation making sure that all input fields have the
-                  correct value in there. If a field is empty or have incorrect
-                  value it will throw an error.
+                  Implement third party API to fetch and render data into HTML.
+                  It was a great way to practice my API skills and to test what
+                  I have learned.
                 </p>
                 <div class="view-github-button">
                   <a
-                    href="https://visayformvalidation.netlify.app"
+                    href="https://visayrecipeapp.netlify.app"
                     target="_blank"
                     class="view-btn"
                     >View</a
                   >
-                  <a
-                    href="https://github.com/vsvang87/FormValidation/tree/master"
-                    target="_blank"
-                    class="view-btn"
-                    >Github</a
-                  >
+                  <a href="" target="_blank" class="view-btn">Github</a>
                 </div>
               </div>
             </div>
