1/3/23, change project description

--- a/index.html
+++ b/index.html
@@ -163,10 +163,9 @@
                   <p class="bold-text">T-Shirt Printing Landing Page</p>
                   <small>Html, Sass, JavaScript</small>
                   <p>
-                    This is not a real site. I took the design from another site
-                    and made it my own. I used grid and flexbox for responsive
-                    design and layouts. I added dropdown and mobile menu as
-                    well.
+                    I took the design from another site and made it my own. I
+                    used grid and flexbox for layouts and responsive design . I
+                    added dropdown and mobile menu. This is not a real business.
                   </p>
                   <div class="view-github-button">
                     <a
@@ -192,9 +191,9 @@
                   <p class="bold-text">Loopstudios Landing Page</p>
                   <small>Html, CSS, JavaScript</small>
                   <p>
-                    This is not a real site. I built it from frontendmentor.com.
-                    It was a challenge that I completed. It is a responsive
-                    landing page with a mobile menu.
+                    I built it from frontendmentor.com. It was a challenge to
+                    test my layout skills. It is a responsive landing page with
+                    a mobile menu. This is not a real business.
                   </p>
                   <div class="view-github-button">
                     <a
@@ -220,9 +219,9 @@
                   <p class="bold-text">Country App</p>
                   <small>Html, CSS, JavaScript</small>
                   <p>
-                    A app that generate a country of your choice. I implemented
-                    api to fetch data. I used template string to render data
-                    into HTML.
+                    An app that generate any country of your choice. I
+                    implemented api to fetch data. I used template string to
+                    render data into HTML.
                   </p>
                   <div class="view-github-button">
                     <a
