1/5/23, changes to projects, changes to about me, changes to padding and margin

--- a/index.html
+++ b/index.html
@@ -64,51 +64,45 @@
       <!--About Me-->
       <section class="section-1 section" id="about-me">
         <div class="wrapper">
-          <div class="center-container">
-            <div class="about-me-container">
-              <div class="about-me-content about-column reveal">
-                <h1>ABOUT ME</h1>
-                <p>
-                  My name is Visay Vang. I am a self-taught developer base out
-                  of Anderson, SC. I haven't stop learning and coding since the
-                  day of discovering it. I am ready to make this jump into the
-                  tech industry.
-                </p>
-                <button id="read-more-btn" class="read-btn">
-                  Read more...
-                </button>
-              </div>
-              <!--Skills-->
-              <div class="skills about-column">
-                <div class="skill-container reveal">
-                  <div class="skill-column">
-                    <i class="fa-brands fa-html5"></i>
-                    <p>HTML</p>
-                  </div>
-                  <div class="skill-column">
-                    <i class="fa-brands fa-css3-alt"></i>
-                    <p>CSS</p>
-                  </div>
-                  <div class="skill-column">
-                    <i class="fa-brands fa-sass"></i>
-                    <p>Sass</p>
-                  </div>
-                  <div class="skill-column">
-                    <i class="fa-brands fa-bootstrap"></i>
-                    <p>Bootstrap</p>
-                  </div>
-                  <div class="skill-column">
-                    <i class="fa-brands fa-js"></i>
-                    <p>JavaScript</p>
-                  </div>
-                  <div class="skill-column">
-                    <i class="fa-brands fa-git-alt"></i>
-                    <p>Git</p>
-                  </div>
-                  <div class="skill-column">
-                    <i class="fa-brands fa-react"></i>
-                    <p>React</p>
-                  </div>
+          <div class="about-me-container">
+            <div class="about-me-content about-column reveal">
+              <h1>ABOUT ME</h1>
+              <p>
+                My name is Visay Vang, I am a self-taught developer. This is by
+                far one of the hardest thing I've ever done. Being a husband and
+                father of 4 it is not an easy task at all. I understand that
+                this is a life long learning career because of technology
+                constantly growing and evolving. This is something that I love
+                to do and is up for the challenge.
+              </p>
+              <button id="read-more-btn" class="read-btn">Read more...</button>
+            </div>
+            <!--Skills-->
+            <div class="skills about-column">
+              <div class="skill-container reveal">
+                <div class="skill-column">
+                  <i class="fa-brands fa-html5"></i>
+                  <p>HTML</p>
+                </div>
+                <div class="skill-column">
+                  <i class="fa-brands fa-css3-alt"></i>
+                  <p>CSS</p>
+                </div>
+                <div class="skill-column">
+                  <i class="fa-brands fa-sass"></i>
+                  <p>Sass</p>
+                </div>
+                <div class="skill-column">
+                  <i class="fa-brands fa-bootstrap"></i>
+                  <p>Bootstrap</p>
+                </div>
+                <div class="skill-column">
+                  <i class="fa-brands fa-js"></i>
+                  <p>JavaScript</p>
+                </div>
+                <div class="skill-column">
+                  <i class="fa-brands fa-git-alt"></i>
+                  <p>Git</p>
                 </div>
               </div>
             </div>
@@ -129,20 +123,18 @@
             <p>
               My journey into code was an unexpected one. I came from a
               non-traditional background working as a CNC Machinist. I wanted to
-              further my career as a machinist by learning G and M codes, but
-              came across software development.
+              further my career as a machinist by learning G codes and came
+              across software development.
             </p>
             <p>
-              I hesitated to pursued software development at first because of
-              intimidation, but after doing my research it change my mind and I
-              decided to dive into it. I coded my first "Hello World" in
-              JavaScript and I was hooked. I knew this is a career I would love
-              to do.
+              I hesitated to pursued at first because of intimidation, but after
+              doing much research it changed my mind. I dove into it and coded
+              my first "Hello World" in JavaScript and was immediately hooked. I
+              knew this is a career I would love to do.
             </p>
             <p>
-              Outside from code, I love to spend time with my wife and children
-              and hangout with friends. I like to watch football, basketball and
-              soccer.
+              Outside from code, I love to spend time with my family and hangout
+              with friends. I like to watch football, basketball and soccer.
             </p>
           </div>
         </div>
@@ -157,25 +149,27 @@
             <div class="landing-page-content">
               <div class="landing-page-column reveal">
                 <div class="img-div">
-                  <img src="/image/t-shirt.png" alt="" />
+                  <img src="/image/password.png" alt="" />
                 </div>
                 <div class="description">
-                  <p class="bold-text">T-Shirt Printing Landing Page</p>
-                  <small>Html, Sass, JavaScript</small>
+                  <p class="bold-text">Password Generator</p>
+                  <small>Html, CSS, JavaScript</small>
                   <p>
-                    I took the design from another site and made it my own. I
-                    used grid and flexbox for layouts and responsive design . I
-                    added dropdown and mobile menu. This is not a real business.
+                    A random password generator. I used arrays to store all
+                    data, then used a for loop to iterate and generate random
+                    character from each. I took the functions and store it in an
+                    object. Used filter and object.value to search for checked
+                    boxes. Also implemented a click to copy function.
                   </p>
                   <div class="view-github-button">
                     <a
-                      href="https://visayundergroundshirt.netlify.app"
+                      href="https://visaypasswordgenerator.netlify.app"
                       target="_blank"
                       class="view-btn"
                       >View</a
                     >
                     <a
-                      href="https://github.com/vsvang87/UndergroundShirts/tree/master"
+                      href="https://github.com/vsvang87/Password-Generator/tree/master"
                       target="_blank"
                       class="view-btn"
                       >Github</a
@@ -185,25 +179,25 @@
               </div>
               <div class="landing-page-column reveal">
                 <div class="img-div">
-                  <img src="/image/loopstudios.jpg" alt="" />
+                  <img src="/image/recipeapp.jpg" alt="" />
                 </div>
                 <div class="description">
-                  <p class="bold-text">Loopstudios Landing Page</p>
-                  <small>Html, CSS, JavaScript</small>
+                  <p class="bold-text">Recipe App</p>
+                  <small>Html, Sass, JavaScript</small>
                   <p>
-                    I built it from frontendmentor.com. It was a challenge to
-                    test my layout skills. It is a responsive landing page with
-                    a mobile menu. This is not a real business.
+                    Implement third party API to fetch and render data into
+                    HTML. It was a great way to practice my API skills and to
+                    test what I have learned.
                   </p>
                   <div class="view-github-button">
                     <a
-                      href="https://visayloopstudios.netlify.app"
+                      href="https://visayrecipeapp.netlify.app"
                       target="_blank"
                       class="view-btn"
                       >View</a
                     >
                     <a
-                      href="https://github.com/vsvang87/Loopstudios/tree/master"
+                      href="https://github.com/vsvang87/RecipeApp/tree/master"
                       target="_blank"
                       class="view-btn"
                       >Github</a
@@ -253,7 +247,7 @@
             </div>
             <div class="btn-div">
               <a href="#contact-form">
-                <button class="contact-btn">Hire Me</button>
+                <button class="contact-btn">Contact Me</button>
               </a>
             </div>
           </div>
@@ -297,19 +291,19 @@
             </div>
             <div class="mini-inner-content reveal">
               <div class="img-div">
-                <img src="/image/recipeapp.jpg" alt="" />
+                <img src="/image/loopstudios.jpg" alt="" />
               </div>
               <div class="description">
-                <p class="bold-text">Recipe App</p>
-                <small>Html, Sass, JavaScript</small>
+                <p class="bold-text">Loopstudios</p>
+                <small>Html, CSS, JavaScript</small>
                 <p>
-                  Implement third party API to fetch and render data into HTML.
-                  It was a great way to practice my API skills and to test what
-                  I have learned.
+                  I built it from frontendmentor.com. It was a challenge to test
+                  my layout skills. It is a responsive landing page with a
+                  mobile menu. This is not a real business.
                 </p>
                 <div class="view-github-button">
                   <a
-                    href="https://visayrecipeapp.netlify.app"
+                    href="https://visayloopstudios.netlify.app"
                     target="_blank"
                     class="view-btn"
                     >View</a
@@ -320,30 +314,25 @@
             </div>
             <div class="mini-inner-content reveal">
               <div class="img-div">
-                <img src="/image/password.png" alt="" />
+                <img src="/image/t-shirt.png" alt="" />
               </div>
               <div class="description">
-                <p class="bold-text">Password Generator</p>
-                <small>Html, CSS, JavaScript</small>
+                <p class="bold-text">T-Shirt Printing</p>
+                <small>Html, Sass, JavaScript</small>
                 <p>
-                  A random password generator. I used arrays to store data, then
-                  used a for loop to iterate and generate random character from
-                  each. I took the functions and store it in an object. Used
-                  filter and object.value to search for checked boxes.
+                  I took the design from another site and made it my own. Built
+                  it with semantic Html. Used grid and flexbox for layouts and
+                  responsive design. Added dropdown and hamburger menu. This is
+                  not a real business.
                 </p>
                 <div class="view-github-button">
                   <a
-                    href="https://visaypasswordgenerator.netlify.app"
+                    href="https://visayundergroundshirt.netlify.app"
                     target="_blank"
                     class="view-btn"
                     >View</a
                   >
-                  <a
-                    href="https://github.com/vsvang87/Password-Generator/tree/master"
-                    target="_blank"
-                    class="view-btn"
-                    >Github</a
-                  >
+                  <a href="" target="_blank" class="view-btn">Github</a>
                 </div>
               </div>
             </div>
