1/5/23, changes to project description, added letter-spacing

--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
                   <p class="bold-text">Password Generator</p>
                   <small>Html, CSS, JavaScript</small>
                   <p>
-                    A random password generator. I used arrays to store all
-                    data, then used a for loop to iterate and generate random
-                    character from each. I took the functions and store it in an
-                    object. Used filter and object.value to search for checked
-                    boxes. Also implemented a click to copy function.
+                    A solo project from Scrimba Frontend Career Path. I used
+                    arrays to store all data, then used a for loop to iterate
+                    and generate random character from each. Used object to
+                    store functions. Used filter and object.value to search for
+                    checked boxes. Also implemented a click to copy function.
                   </p>
                   <div class="view-github-button">
                     <a
@@ -185,9 +185,10 @@
                   <p class="bold-text">Recipe App</p>
                   <small>Html, Sass, JavaScript</small>
                   <p>
-                    Implement third party API to fetch and render data into
-                    HTML. It was a great way to practice my API skills and to
-                    test what I have learned.
+                    Implement third party API to fetch. Used map to iterate and
+                    return data. Then used that data to render into HTML. Also
+                    formatted calories to 2 decimal places. It was a great way
+                    to practice my API skills and to test what I have learned.
                   </p>
                   <div class="view-github-button">
                     <a
@@ -214,8 +215,9 @@
                   <small>Html, CSS, JavaScript</small>
                   <p>
                     An app that generate any country of your choice. I
-                    implemented api to fetch data. I used template string to
-                    render data into HTML.
+                    implemented API to fetch data. Used index[0] and
+                    Object.values to search for wanted data. I used template
+                    string to render data into HTML.
                   </p>
                   <div class="view-github-button">
                     <a
