--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <section class="section section-4" id="project">
         <div class="wrapper">
           <div class="landing-page-container">
-            <h1>PORJECTS</h1>
+            <h1>PROJECTS</h1>
             <div class="landing-page-content">
               <div class="landing-page-column reveal">
                 <div class="img-div">
