1/2/23, added cv link and button

--- a/index.html
+++ b/index.html
@@ -50,12 +50,10 @@
             <p>I am a Frontend Developer</p>
             <p>I build responsive user interfaces</p>
             <p>Available for work</p>
-            <a href="https://github.com/" target="_blank"
-              ><i class="fa-brands fa-github"></i
-            ></a>
-            <a href="https://www.linkedin.com/in/vsvang/" target="_blank"
-              ><i class="fa-brands fa-linkedin"></i
-            ></a>
+
+            <a href="/data/web-developer.pdf" target="_blank" class="cv-btn"
+              >CV</a
+            >
           </div>
         </div>
       </div>
