1/5/23, changes to about me

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
               <p>
                 My name is Visay Vang, I am a self-taught developer. This is by
                 far one of the hardest thing I've ever done. Being a husband and
-                father of 4 it is not an easy task at all. I understand that
-                this is a life long learning career because of technology
-                constantly growing and evolving. This is something that I love
-                to do and is up for the challenge.
+                father of 4 while trying to learn code is not an easy task at
+                all. I understand that this is a life long learning career
+                because of technology constantly growing and evolving. This is
+                something that I love to do and is up for the challenge.
               </p>
               <button id="read-more-btn" class="read-btn">Read more...</button>
             </div>
