1/7/23, change to new project, added box-shadow to btn

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
               <p>
                 My name is Visay Vang, I am a self-taught developer. This is by
                 far one of the hardest thing I've ever done. Being a husband and
-                father of 4 while trying to learn code is not an easy task at
-                all. I understand that this is a life long learning career
-                because of technology constantly growing and evolving. This is
-                something that I love to do and is up for the challenge.
+                father of 4 while trying to learn code is not an easy task. I
+                understand that this is a life long learning career because of
+                technology constantly growing and evolving. This is something
+                that I love to do and is up for the challenge.
               </p>
               <button id="read-more-btn" class="read-btn">Read more...</button>
             </div>
@@ -291,24 +291,30 @@
             </div>
             <div class="mini-inner-content reveal">
               <div class="img-div">
-                <img src="/image/loopstudios.jpg" alt="" />
+                <img src="/image/bookmark.jpg" alt="" />
               </div>
               <div class="description">
-                <p class="bold-text">Loopstudios</p>
-                <small>Html, CSS, JavaScript</small>
+                <p class="bold-text">Bookmark Landing Page</p>
+                <small>Html, Sass, JavaScript</small>
                 <p>
-                  I built it from frontendmentor.com. It was a challenge to test
-                  my layout skills. It is a responsive landing page with a
-                  mobile menu. This is not a real business.
+                  A challenge that I built from frontendmentor.com. It is a
+                  fully responsive landing page. It was a great way to put my
+                  layout and responsiveness skill to the test. This is not a
+                  real business.
                 </p>
                 <div class="view-github-button">
                   <a
-                    href="https://visayloopstudios.netlify.app"
+                    href="https://visaybookmark.netlify.app"
                     target="_blank"
                     class="view-btn"
                     >View</a
                   >
-                  <a href="" target="_blank" class="view-btn">Github</a>
+                  <a
+                    href="https://github.com/vsvang87/Book-Mark-Landing-Page/tree/master"
+                    target="_blank"
+                    class="view-btn"
+                    >Github</a
+                  >
                 </div>
               </div>
             </div>
