1/7/23, change project descriptions

--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@
                   <p class="bold-text">Password Generator</p>
                   <small>Html, CSS, JavaScript</small>
                   <p>
-                    A solo project from Scrimba Frontend Career Path. I used
-                    arrays to store all data, then used a for loop to iterate
-                    and generate random character from each. Used object to
-                    store functions. Used filter and object.value to search for
-                    checked boxes. Also implemented a click to copy function.
+                    A solo project from Frontend Career Path at scrimba.com. You
+                    could set character length and include uppercase, lowercase,
+                    symbol or number in your password. After selecting your
+                    options it will generate a random password for you. I also
+                    included the click to copy function.
                   </p>
                   <div class="view-github-button">
                     <a
@@ -183,10 +183,9 @@
                   <p class="bold-text">Recipe App</p>
                   <small>Html, Sass, JavaScript</small>
                   <p>
-                    Implement third party API to fetch. Used map to iterate and
-                    return data. Then used that data to render into HTML. Also
-                    formatted calories to 2 decimal places. It was a great way
-                    to practice my API skills and to test what I have learned.
+                    A recipe app that search and retrieved a recipe of your
+                    choice. Also added calories and diet level. It was a great
+                    way to practice and implemented a third party API.
                   </p>
                   <div class="view-github-button">
                     <a
@@ -266,12 +265,10 @@
                 <p class="bold-text">Discount Calculator</p>
                 <small>Html, CSS, JavaScript</small>
                 <p>
-                  I implemented regex to check for numbers and special
-                  character. I used a match method with an if/else statement to
-                  make sure the input value match. Also formatted the decimal to
-                  two places to get an accurate result. I added an error message
-                  if other than number or a certain special character is
-                  entered.
+                  A small calculator that calculate percentage discount for you.
+                  Implemented regex to check for number and special characters.
+                  Used an if/else condition and match method for functionality.
+                  Also formatted decimal to 2 places and added an error message.
                 </p>
                 <div class="view-github-button">
                   <a
@@ -299,8 +296,8 @@
                 <p>
                   A challenge that I built from frontendmentor.com. It is a
                   fully responsive landing page. It was a great way to put my
-                  layout and responsiveness skill to the test. This is not a
-                  real business.
+                  layout and responsive skill to the test. This is not a real
+                  business.
                 </p>
                 <div class="view-github-button">
                   <a
