01/17/23, change resume, added new project

--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
                   <i class="fa-brands fa-git-alt"></i>
                   <p>Git</p>
                 </div>
+                <div class="skill-column">
+                  <i class="fa-brands fa-react"></i>
+                  <p>React</p>
+                </div>
               </div>
             </div>
           </div>
@@ -205,30 +209,26 @@
               </div>
               <div class="landing-page-column reveal">
                 <div class="img-div">
-                  <img src="/image/countryapp.jpg" alt="" />
+                  <img src="/image/speedtype.jpg" alt="" />
                 </div>
                 <div class="description">
-                  <p class="bold-text">Country App</p>
+                  <p class="bold-text">Speed Typing Game</p>
                   <small>Html, CSS, JavaScript</small>
                   <p>
-                    An app that generate any country of your choice. I
-                    implemented API to fetch data. Used index[0] and
-                    Object.values to search for wanted data. I used template
-                    string to render data into HTML.
+                    A speed typing game that generate random words for you to
+                    type. There's a count down timer, level difficulty and score
+                    to keep track. Implement local storage to save difficulty
+                    level when reset, time interval for count down, and
+                    math.random to generate random words.
                   </p>
                   <div class="view-github-button">
                     <a
-                      href="https://visaycountryapp.netlify.app"
+                      href="https://visayspeedtypinggame.netlify.app"
                       target="_blank"
                       class="view-btn"
                       >View</a
                     >
-                    <a
-                      href="https://github.com/vsvang87/CountryApp/tree/master"
-                      target="_blank"
-                      class="view-btn"
-                      >Github</a
-                    >
+                    <a href="#" target="_blank" class="view-btn">Github</a>
                   </div>
                 </div>
               </div>
