--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <p>Available for work</p>
 
             <a href="/data/web-developer.pdf" target="_blank" class="cv-btn"
-              >CV</a
+              >Resume</a
             >
           </div>
         </div>
