1/28/23, added js module, render data into HTML, delete HTML project sect

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <p>I build responsive user interfaces</p>
             <p>Available for work</p>
 
-            <a href="/data/web-developer.pdf" target="_blank" class="cv-btn"
+            <a href="/data/frontend-dev.pdf" target="_blank" class="cv-btn"
               >Resume</a
             >
           </div>
@@ -148,90 +148,8 @@
         <div class="wrapper">
           <div class="landing-page-container">
             <h1>PROJECTS</h1>
-            <div class="landing-page-content">
-              <div class="landing-page-column reveal">
-                <div class="img-div">
-                  <img src="/image/password.png" alt="" />
-                </div>
-                <div class="description">
-                  <p class="bold-text">Password Generator</p>
-                  <small>Html, CSS, JavaScript</small>
-                  <p>
-                    A solo project from Frontend Career Path at scrimba.com. You
-                    could set character length and include uppercase, lowercase,
-                    symbol or number in your password. After selecting your
-                    options it will generate a random password for you. I also
-                    included the click to copy function.
-                  </p>
-                  <div class="view-github-button">
-                    <a
-                      href="https://visaypasswordgenerator.netlify.app"
-                      target="_blank"
-                      class="view-btn"
-                      >View</a
-                    >
-                    <a
-                      href="https://github.com/vsvang87/Password-Generator/tree/master"
-                      target="_blank"
-                      class="view-btn"
-                      >Github</a
-                    >
-                  </div>
-                </div>
-              </div>
-              <div class="landing-page-column reveal">
-                <div class="img-div">
-                  <img src="/image/recipeapp.jpg" alt="" />
-                </div>
-                <div class="description">
-                  <p class="bold-text">Recipe App</p>
-                  <small>Html, Sass, JavaScript</small>
-                  <p>
-                    A recipe app that search and retrieved a recipe of your
-                    choice. Also added calories and diet level. It was a great
-                    way to practice and implemented a third party API.
-                  </p>
-                  <div class="view-github-button">
-                    <a
-                      href="https://visayrecipeapp.netlify.app"
-                      target="_blank"
-                      class="view-btn"
-                      >View</a
-                    >
-                    <a
-                      href="https://github.com/vsvang87/RecipeApp/tree/master"
-                      target="_blank"
-                      class="view-btn"
-                      >Github</a
-                    >
-                  </div>
-                </div>
-              </div>
-              <div class="landing-page-column reveal">
-                <div class="img-div">
-                  <img src="/image/speedtype.jpg" alt="" />
-                </div>
-                <div class="description">
-                  <p class="bold-text">Speed Typing Game</p>
-                  <small>Html, CSS, JavaScript</small>
-                  <p>
-                    A speed typing game that generate random words for you to
-                    type. There's a count down timer, level difficulty and score
-                    to keep track. Implement local storage to save difficulty
-                    level when reset, time interval for count down, and
-                    math.random to generate random words.
-                  </p>
-                  <div class="view-github-button">
-                    <a
-                      href="https://visayspeedtypinggame.netlify.app"
-                      target="_blank"
-                      class="view-btn"
-                      >View</a
-                    >
-                    <a href="#" target="_blank" class="view-btn">Github</a>
-                  </div>
-                </div>
-              </div>
+            <div class="landing-page-content" id="project-render-container">
+              <!--Display projects here-->
             </div>
           </div>
         </div>
@@ -256,89 +174,8 @@
       <section class="section-6 section">
         <div class="wrapper">
           <h1>MORE PROJECTS</h1>
-          <div class="mini-project-content">
-            <div class="mini-inner-content reveal">
-              <div class="img-div">
-                <img src="/image/discountcalc.jpg" alt="" />
-              </div>
-              <div class="description">
-                <p class="bold-text">Discount Calculator</p>
-                <small>Html, CSS, JavaScript</small>
-                <p>
-                  A small calculator that calculate percentage discount for you.
-                  Implemented regex to check for number and special characters.
-                  Used an if/else condition and match method for functionality.
-                  Also formatted decimal to 2 places and added an error message.
-                </p>
-                <div class="view-github-button">
-                  <a
-                    href="https://visaydiscountcalculator.netlify.app"
-                    target="_blank"
-                    class="view-btn"
-                    >View</a
-                  >
-                  <a
-                    href="https://github.com/vsvang87/DiscountCalculator/tree/master"
-                    target="_blank"
-                    class="view-btn"
-                    >Github</a
-                  >
-                </div>
-              </div>
-            </div>
-            <div class="mini-inner-content reveal">
-              <div class="img-div">
-                <img src="/image/bookmark.jpg" alt="" />
-              </div>
-              <div class="description">
-                <p class="bold-text">Bookmark Landing Page</p>
-                <small>Html, Sass, JavaScript</small>
-                <p>
-                  A challenge that I built from frontendmentor.com. It is a
-                  fully responsive landing page. It was a great way to put my
-                  layout and responsive skill to the test. This is not a real
-                  business.
-                </p>
-                <div class="view-github-button">
-                  <a
-                    href="https://visaybookmark.netlify.app"
-                    target="_blank"
-                    class="view-btn"
-                    >View</a
-                  >
-                  <a
-                    href="https://github.com/vsvang87/Book-Mark-Landing-Page/tree/master"
-                    target="_blank"
-                    class="view-btn"
-                    >Github</a
-                  >
-                </div>
-              </div>
-            </div>
-            <div class="mini-inner-content reveal">
-              <div class="img-div">
-                <img src="/image/t-shirt.png" alt="" />
-              </div>
-              <div class="description">
-                <p class="bold-text">T-Shirt Printing</p>
-                <small>Html, Sass, JavaScript</small>
-                <p>
-                  I took the design from another site and made it my own. Built
-                  it with semantic Html. Used grid and flexbox for layouts and
-                  responsive design. Added dropdown and hamburger menu. This is
-                  not a real business.
-                </p>
-                <div class="view-github-button">
-                  <a
-                    href="https://visayundergroundshirt.netlify.app"
-                    target="_blank"
-                    class="view-btn"
-                    >View</a
-                  >
-                  <a href="" target="_blank" class="view-btn">Github</a>
-                </div>
-              </div>
-            </div>
+          <div class="mini-project-content" id="more-project-container">
+            <!--Display Last 3 Projects-->
           </div>
         </div>
       </section>
@@ -417,6 +254,6 @@
         </div>
       </div>
     </footer>
-    <script src="/js/main.js"></script>
+    <script src="/js/main.js" type="module"></script>
   </body>
 </html>
